Refactor: Clean up build system and add EULA
- Consolidated multiple build scripts into single master build.bat
- Organized build files into dedicated build/ directory
- Added comprehensive EULA with Gressling Consulting GmbH details
- Fixed PyInstaller database path for bundled executables
- Removed redundant activation and build scripts
- Updated .gitignore to exclude build artifacts but keep config
- Added build documentation and instructions

Build commands:
- scripts\build.bat exe (executable)
- scripts\build.bat installer (NSIS installer)
- scripts\build.bat portable (ZIP distribution)
- scripts\build.bat all (everything)
- scripts\build.bat clean (cleanup)

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ __pycache__/
 
 # Distribution / packaging
 .Python
-build/
+# build/ - We want to keep our build config directory
 develop-eggs/
 dist/
 downloads/
@@ -184,3 +184,10 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
+
+# Build artifacts (but keep build config directory)
+build/build/
+dist/
+installer/
+portable/
+*.exe
