--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,15 @@ MANIFEST
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
-*.spec
+# *.spec - We keep our custom spec files in build/
+# PyInstaller build artifacts
+build/iso42001/*.toc
+build/iso42001/*.pyz
+build/iso42001/*.pkg
+build/iso42001/*.zip
+build/iso42001/localpycs/
+build/iso42001/warn-*.txt
+build/iso42001/xref-*.html
 
 # Installer logs
 pip-log.txt
@@ -190,4 +198,8 @@ build/build/
 dist/
 installer/
 portable/
+
+# Database files (user data)
+data/*.db
+data/*.db-*
 *.exe
