Separate development and example databases
- Created scripts/create_example_db.py to generate clean sample database
- Added data/iso42001_example.db with realistic sample data:
  * 5 AI assets (chatbot, fraud detection, recommendations, etc.)
  * 3 risk assessments with mitigation strategies
  * 3 audit records with compliance scores
- Updated installer to use example database for distribution
- Modified .gitignore to exclude dev database but include example
- Enhanced build.bat to auto-generate example DB before installer build
- Keeps development data separate from shipped example data

--- a/.gitignore
+++ b/.gitignore
@@ -200,6 +200,8 @@ installer/
 portable/
 
 # Database files (user data)
-data/*.db
+data/iso42001.db
 data/*.db-*
+# Keep example database for distribution
+!data/iso42001_example.db
 *.exe
